lang/macro/tests/ui/fail/12-const-function.stderr
error: `const` is not supported for functions in liquid contract
  --> $DIR/12-const-function.rs:13:9
   |
13 |         const fn noop(&self) {}
   |         ^^^^^
